[gd_scene load_steps=5 format=3 uid="uid://cficrvdl56q2a"]

[ext_resource type="Script" path="res://characters/player/player_controller.gd" id="1_4b3st"]

[sub_resource type="Animation" id="Animation_gx1wf"]
resource_name = "headbob"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadMarker/Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.05, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_fo6ac"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeadMarker/Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v3xaf"]
_data = {
"RESET": SubResource("Animation_fo6ac"),
"headbob": SubResource("Animation_gx1wf")
}

[node name="Player" type="Node3D"]
script = ExtResource("1_4b3st")

[node name="HeadMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera" type="Camera3D" parent="HeadMarker"]
fov = 80.0
far = 100.0

[node name="RaysMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="FrontRayCast" type="RayCast3D" parent="RaysMarker"]
target_position = Vector3(0, 0, -2)

[node name="BackRayCast" type="RayCast3D" parent="RaysMarker"]
target_position = Vector3(0, 0, 2)

[node name="LeftRayCast" type="RayCast3D" parent="RaysMarker"]
target_position = Vector3(-2, 0, 0)

[node name="RightRayCast" type="RayCast3D" parent="RaysMarker"]
target_position = Vector3(2, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v3xaf")
}
